Entries are sorted chronologically from oldest to youngest within each release,
releases are sorted from youngest to oldest.

version 7.0.2+mtv:
- Molotov patches
- Redis protocol via libhiredis

version 7.0.2:
 avcodec/snow: Fix off by 1 error in run_buffer
 avcodec/utils: apply the same alignment to YUV410 as we do to YUV420 for snow
 avformat/iamf_parse: Check for 0 samples
 swscale: [loongarch] Fix checkasm-sw_yuv2rgb failure.
 avcodec/aacps_tablegen_template: don't redefine CONFIG_HARDCODED_TABLES
 avutil/hwcontext_vaapi: use the correct type for VASurfaceAttribExternalBuffers.buffers
 avcodec/pcm-bluray/dvd: Use correct pointer types on BE
 avcodec/pngenc: fix sBIT writing for indexed-color PNGs
 avcodec/pngdec: use 8-bit sBIT cap for indexed PNGs per spec
 avformat/mov: check that child boxes of trak are only present inside it
 avformat/mov: check that sample and chunk count is 1 for HEIF
 avcodec/videotoolboxenc: Fix bitrate doesn't work as expected
 avdevice/dshow: Don't skip audio devices if no video device is present
 avcodec/hdrenc: Allocate more space
 avcodec/cfhdenc: Height of 16 is not supported
 avcodec/cfhdenc: Allocate more space
 avcodec/osq: fix integer overflow when applying factor
 avcodec/osq: avoid using too large numbers for shifts and integers in update_residue_parameter()
 avcodec/vaapi_encode: Check hwctx
 avcodec/proresdec: Consider negative bits left
 avcodec/alsdec: Clear shift_value
 avcodec/hevc/hevcdec: Do not allow slices to depend on failed slices
 avformat/mov: add an EOF check in IPRP
 avfilter/vf_xfade: Check ff_inlink_consume_frame() for failure
 avutil/slicethread: Check pthread_*_init() for failure
 avutil/frame: Check log2_crop_align
 avutil/buffer: Check ff_mutex_init() for failure
 avformat/xmv: Check this_packet_size
 avformat/webpenc: Check filesize in trailer
 avformat/ty: rec_size seems to only need 32bit
 avformat/tty: Check avio_size()
 avformat/siff: Basic pkt_size check